--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "consumerphysics.com.myscioapplication"
@@ -39,14 +39,14 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:22.2.1'
+    implementation 'com.android.support:appcompat-v7:22.2.1'
 
-    compile(name: 'SCiOSDK_Android', ext: 'aar')
+    implementation(name: 'SCiOSDK_Android', ext: 'aar')
 
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    compile 'com.squareup.okio:okio:1.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
+    implementation 'com.squareup.okio:okio:1.11.0'
 }
 
 task('incrementVersionName') << {
